Add experience section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Anurag Regmi">
+  <meta name="description" content="Anurag Regmi, Software Engineer/Python Developer/Django Developer in Nepal">
   <meta name="author" content="Anurag Regmi">
 
   <title>Anurag Regmi</title>
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Anurag Regmi</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="Profile Pic Anurag">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,6 +42,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -137,6 +140,71 @@
       </div>
 
     </section>
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="projects">
+      <div class="w-100">
+        <h2 class="mb-5">Projects</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <a href="https://realhrsoft.com" target="_blank"><h3 class="mb-0">RealHRSoft</h3></a>
+            <div class="mb-3">[SAAS Based HR Software accepted by US and Nepal govt. Collaboration project MCA]</div>
+            <ul>
+              <li>Designed and developed backend of following modules: <b>HRIS, Attendance and Leave, Permission, Notification, Noticeboard</b></li>
+              <li>Maintenance and enhancement on following modules: <b>Payroll, Task, Events</b></li>
+              <li>Deployment and CI/CD implementation</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <a href="https://rojgari.com" target="_blank"><h3 class="mb-0">Rojgari</h3></a>
+            <div class="mb-3">[Job Portal for Blue Collar workers under UkAid, 30,000+ registered users]</div>
+            <ul>
+              <li>Designed <b>overall architecture​</b> of Rojgari Job Portal</li>
+              <li>Designed and developed <b>REST APIs</b></li>
+              <li>Deployment and CI/CD implementation</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <a href="https://merojob.com" target="_blank"><h3 class="mb-0">Merojob</h3></a>
+            <div class="mb-3">[Largest Job Site in Nepal with more than 300+ real time users, More than half
+              million registered users and 100,000 daily page visits.]</div>
+            <ul>
+              <li>Designed and developed following features: <b>Advanced Jobseeker Search, Application Management</b></li>
+              <li>Bug Fixes and page optimizations</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <a href="https://realsolutions.com.np" target="_blank"><h3 class="mb-0">Real Solutions Website</h3></a>
+            <ul>
+              <li>Developed feature for online application and admit card download</li>
+              <li>Bug Fixes and enhancements</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <a href="https://nefosta.org.np" target="_blank"><h3 class="mb-0">NEFOSTA website</h3></a>
+            <ul>
+              <li>Developed website for Nepal Food Scientists and Technologists Association
+                (NEFOSTA)</li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
 
     <hr class="m-0">
 
@@ -210,6 +278,10 @@
           <li>VueJS</li>
           <li>Git</li>
           <li>Docker</li>
+          <li>Jira</li>
+          <li>Jenkins</li>
+          <li>Postman</li>
+          <li>AWS (ec2 and s3)</li>
         </ul>
       </div>
     </section>
