Update contact detail

--- a/index.html
+++ b/index.html
@@ -165,17 +165,26 @@ License URL: http://creativecommons.org/licenses/by/3.0/
               <h3 class="head-w3ls">Contact Me</h3>
               <ul class="list-unstyled mt-4 w3pvt_social_list">
                 <li>
-                  <a href="#" class="w3layouts-icon">
+                  <a
+                    href="https://www.linkedin.com/in/anurag-regmi/"
+                    class="w3layouts-icon"
+                  >
                     <span class="fa fa-5x fa-linkedin"></span>
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="w3layouts-icon">
+                  <a
+                    href="mailto:info@anuragregmi.com.np"
+                    class="w3layouts-icon"
+                  >
                     <span class="fa fa-5x fa-envelope"></span>
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="w3layouts-icon">
+                  <a
+                    href="https://github.com/anuragregmi"
+                    class="w3layouts-icon"
+                  >
                     <span class="fa fa-5x fa-github"></span>
                   </a>
                 </li>
