Add links in projects

--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 style="max-width: 100%; margin: auto"
               >
                 <div class="col-6 gal-img">
-                  <a href="#" id="gal1"
+                  <a href="https://uxcam.com/" id="gal1" target="_blank"
                     ><img
                       src="images/uxcam.svg"
                       alt="news image"
                       class="img-fluid"
                   /></a>
-                  <a href="#" id="gal2"
+                  <a href="https://rojgari.com/en" id="gal2" target="_blank"
                     ><img
                       src="images/rojgari logo.svg"
                       alt="news image"
@@ -144,14 +144,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                   /></a>
                 </div>
                 <div class="col-6 gal-img">
-                  <a href="#" id="gal3"
+                  <a href="https://merojob.com/" id="gal3" target="_blank"
                     ><img
                       src="images/mj_logo.svg"
                       alt="news image"
                       class="img-fluid"
                   /></a>
 
-                  <a href="#" id="gal4"
+                  <a href="https://realhrsoft.com/" id="gal4" target="_blank"
                     ><img
                       src="images/realhrsoft.png"
                       alt="news image"
@@ -168,6 +168,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                   <a
                     href="https://www.linkedin.com/in/anurag-regmi/"
                     class="w3layouts-icon"
+                    target="_blank"
                   >
                     <span class="fa fa-5x fa-linkedin"></span>
                   </a>
@@ -176,6 +177,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                   <a
                     href="mailto:info@anuragregmi.com.np"
                     class="w3layouts-icon"
+                    target="_blank"
                   >
                     <span class="fa fa-5x fa-envelope"></span>
                   </a>
@@ -184,6 +186,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                   <a
                     href="https://github.com/anuragregmi"
                     class="w3layouts-icon"
+                    target="_blank"
                   >
                     <span class="fa fa-5x fa-github"></span>
                   </a>
