update about me

--- a/index.html
+++ b/index.html
@@ -480,12 +480,20 @@
                   My name is Anurag Regmi, and I specialize in building robust
                   web applications.
                 </p>
-                <p class="text-muted">
-                  I have over six years of experience in backend development
-                  using Python and Django. I specialize in creating APIs,
-                  scaling systems, and improving performance to help businesses
-                  grow efficiently.
-                </p>
+                <div class="text-muted">
+                  <p>
+                    I'm <strong>Anurag Regmi</strong>, a software developer
+                    skilled in <strong>Python</strong>, <strong>Django</strong>,
+                    <strong>JavaScript</strong>, and <strong>React</strong>. I
+                    enjoy building efficient web applications and have worked on
+                    projects ranging from mobile app analytics to job portals.
+                  </p>
+                  <p>
+                    I’m passionate about continuous learning and adapting to new
+                    technologies. Let's connect and explore new opportunities
+                    together!
+                  </p>
+                </div>
                 <div class="d-flex justify-content-center fs-2 gap-4">
                   <a
                     class="text-gradient"
