Update about page

--- a/index.html
+++ b/index.html
@@ -482,9 +482,9 @@
                 </p>
                 <div class="text-muted">
                   <p>
-                    I'm <strong>Anurag Regmi</strong>, a software developer
+                    I'm <strong>Anurag Regmi</strong>, a software engineer
                     skilled in <strong>Python</strong>, <strong>Django</strong>,
-                    <strong>JavaScript</strong>, and <strong>React</strong>. I
+                    <strong>JavaScript</strong>, and <strong>VueJs</strong>. I
                     enjoy building efficient web applications and have worked on
                     projects ranging from mobile app analytics to job portals.
                   </p>
